# phys_engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json
game/: main.cpp
include/: Game.hpp
include/phys/: Object.hpp  Particle.hpp  Renderer.hpp
include/phys/math/: Real.hpp  Vec2.hpp
src/: Game.cpp  Renderer.cpp  main.cpp
tests/: test_vec2.cpp
